src/main/resources/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service-test
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    - # host: example.com
      http:
        paths:
          - path: /api/test(/|$)(.*)
            backend:
              serviceName: service-test
              servicePort: 8080
